--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ loader_version=0.16.13
 yarn_mappings=1.21+build.1
 
 mod_version=1.0.0
-maven_group=com.bigboibeef.treechopper
+maven_group=com.bigboibeef.practice
 archives_base_name=practice
 
 fabric_version=0.102.0+1.21
